6.1.2012 git
- bugfix: in some mysql versions, deltasql was not searching for the modified scripts, when the option was set
- preparing utils.inc.php to handle new column in tbparameter, refactoring code a bit

5.1.2012 git
- preparing datamodel to accept usersettings (added user_id column to tbparameter)
- more updates on footers

4.1.2012 git
- updating footers to be consistent
- spreading help links to topics overall over deltasql server

2.1.2012 git
- deltasql reports an error when trying to submit a script with no modules defined (happens when deltasql is freshly installed).
- fixing minor bug on login screen

*******************************
1.4.2 Release Notes (1.1.2012)

Maintenance release:
Visual enhancements (icons on important actions and border to empty cells)
Ability to branch from existing tags
Minor bugfixes

*******************************

28.12.2011 git
- Disabling ability to edit username, as it might create problems in rare situations.
- adding - to empty cells in tables, so that the cell appears correctly, even if it is empty
- User creation still had undefined variables, if under strict error reporting in php.ini

27.12.2011 git
- Adding some icons to improve navigation. The icons are taken from phpMyAdmin

24.11.2011 git
Adding ability to branch from existing tags.


*******************************
1.4.1 Release Notes (23.9.2011)

Maintenance release:

deltaclient: new field database type added, fixed errors in closing files project.conf and branches.conf 

deltasql server:
- minimizing impact of Undefined Index errors when running with php.ini 
error_reporting = E_ALL | E_STRICT ; instead of E_ALL & ~E_NOTICE
- dropped unused schemaname and description fields as they created confusion to users and were used by spammers
- back to the onliner INSERT statement to update synchronization information
- inserted links to videos into documentation, improved documentation

*******************************


15.9.2011 git