@@ -1,5 +1,6 @@
 6.1.2012 git
 - bugfix: in some mysql versions, deltasql was not searching for the modified scripts, when the option was set
+- bugfix: package and view detection on lowercase + undefined index errors on this page
 - preparing utils.inc.php to handle new column in tbparameter, refactoring code a bit
 
 5.1.2012 git
